crates/ruff_linter/src/rules/perflint/snapshots/ruff_linter__rules__perflint__tests__preview__PERF403_PERF403_super.py.snap
---
source: crates/ruff_linter/src/rules/perflint/mod.rs
---
PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403_super.py:25:13
   |
23 |         result = {}
24 |         for key, value in super().pairs():
25 |             result[key] = value
   |             ^^^^^^^^^^^^^^^^^^^
26 |
27 |     def explicit(self, pairs):
   |
help: Replace for loop with dict comprehension
   |
22 |     def iterable(self):
   -         result = {}
   -         for key, value in super().pairs():
   -             result[key] = value
23 +         result = {key: value for key, value in super().pairs()}
24 |
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403_super.py:31:17
   |
29 |         for key, value in pairs:
30 |             if super(Child, self).condition():
31 |                 result[key] = value
   |                 ^^^^^^^^^^^^^^^^^^^
32 |
33 |     def shadowed(self, pairs):
   |
help: Replace for loop with dict comprehension
   |
27 |     def explicit(self, pairs):
   -         result = {}
   -         for key, value in pairs:
   -             if super(Child, self).condition():
   -                 result[key] = value
28 +         result = {key: value for key, value in pairs if super(Child, self).condition()}
29 |
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403_super.py:38:17
   |
36 |         for key, value in pairs:
37 |             if super().condition():
38 |                 result[key] = value
   |                 ^^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
   |
34 |         super = lambda: Parent()
   -         result = {}
   -         for key, value in pairs:
   -             if super().condition():
   -                 result[key] = value
35 +         result = {key: value for key, value in pairs if super().condition()}
   |
note: This is an unsafe fix and may change runtime behavior
